[package]
name = "datatest-stable"
version = "0.2.0"
description = "Data-driven tests that work on stable Rust"
repository = "https://github.com/nextest-rs/datatest-stable"
license = "MIT OR Apache-2.0"
publish = true
readme = "README.md"
edition = "2021"
categories = ["development-tools::testing"]
keywords = ["datatest", "data-driven-tests", "test-harness"]
rust-version = "1.60"

[dependencies]
camino = "1.1.6"
libtest-mimic = "0.6.1"
regex = "1.5.4"
walkdir = "2.3.2"

[[test]]
name = "example"
harness = false
