[package]
name = "datatest-stable"
version = "0.2.6"
description = "Data-driven tests that work on stable Rust"
repository = "https://github.com/nextest-rs/datatest-stable"
license = "MIT OR Apache-2.0"
publish = true
readme = "README.md"
edition = "2021"
categories = ["development-tools::testing"]
keywords = ["datatest", "data-driven-tests", "test-harness"]
rust-version = "1.66"

[dependencies]
camino = "1.1.6"
fancy-regex = "0.13.0"
libtest-mimic = "0.7.2"
walkdir = "2.5.0"

[[test]]
name = "example"
harness = false
