[package]
name = "datatest-stable"
version = "0.2.9"
description = "Data-driven tests that work on stable Rust"
repository = "https://github.com/nextest-rs/datatest-stable"
license = "MIT OR Apache-2.0"
publish = true
readme = "README.md"
edition = "2021"
categories = ["development-tools::testing"]
keywords = ["datatest", "data-driven-tests", "test-harness"]
rust-version = "1.66"

[dependencies]
camino = "1.1.9"
fancy-regex = "0.13.0"
libtest-mimic = "0.8.1"
walkdir = "2.5.0"

[target.'cfg(unix)'.dev-dependencies]
camino-tempfile = "1.1.1"
fs_extra = "1.3.0"

[[test]]
name = "example"
harness = false

[[test]]
name = "run_example"
harness = true
